--- a/src/main/resources/templates/join-login/email-login.html
+++ b/src/main/resources/templates/join-login/email-login.html
@@ -88,6 +88,16 @@
             <div class="half-img"></div>
         </div>
     </div>
+
+    <div class="modal-container">
+        <div class="modal">
+            <div class="modal-content">아이디 비밀번호를 다시 확인해주세요</div>
+            <div class="modal-ok-div">
+                <button type="button" class="modal-ok">확인</button>
+            </div>
+        </div>
+    </div>
+
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 <script src="/js/join-login/email-login.js"></script>
