--- a/src/main/resources/templates/mypage/user-modify.html
+++ b/src/main/resources/templates/mypage/user-modify.html
@@ -301,7 +301,7 @@
                 <div class="modify-content">
                     <div class="modify-title-div">
                         <p class="modify-title">회원탈퇴</p>
-                        <button type="button" class="modify-button">탈퇴</button>
+                        <button type="button" class="modify-button unregister-button">탈퇴</button>
                     </div>
                 </div>
 
