--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -147,29 +147,29 @@
                                     <div></div>
                                     <div class="volunteer-percentage-wrapper">
                                         <div></div>
-                                        <div class="popular-percentage-layout">
+                                        <div class="popular-percentage-layout" th:each="memberRankList, state : ${memberRankList}">
                                             <div class="image-wrapper">
                                                 <a href="#"></a>
                                             </div>
-                                            <span class="rank-layout-top">1</span>
+                                            <span class="rank-layout-top" th:text="${state.count}">1</span>
                                             <div class="info-wrapper">
                                                 <dl>
                                                     <dd class="volunteer-sub-info">
                                                         <span>
-                                                            <a href="#">금냥</a>
+                                                            <a href="#" >엽전</a>
                                                         </span>
                                                         <span>
-                                                            <a href="#">3티어</a>
+                                                            <a href="#" th:text="${memberRankList.memberRank}">3티어</a>
                                                         </span>
                                                     </dd>
                                                     <dt>
                                                         <a href="#">
-                                                            <strong>황자현</strong>
+                                                            <strong th:text="${memberRankList.memberName}">황자현</strong>
                                                         </a>
                                                     </dt>
                                                 </dl>
                                                 <div class="funding-status">
-                                                    <span class="percentage">봉사 54시간 달성</span>
+                                                    <span class="percentage" th:text="${memberRankList.memberVolunteerTime}">봉사 54시간 달성</span>
                                                 </div>
                                             </div>
                                         </div>
