--- a/src/main/resources/templates/admin/notice.html
+++ b/src/main/resources/templates/admin/notice.html
@@ -229,6 +229,7 @@
         ],
     });
 </script>
+<script src="/js/admin/ajax.js"></script>
 <script src="/js/admin/notice.js"></script>
 <script src="/js/admin/app.js"></script>
 <script src="/js/admin/events.js"></script>
