--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -230,7 +230,7 @@
                                                                     <dl>
                                                                         <dd class="volunteer-sub-info">
                                                                             <span>
-                                                                                <a href="#">조회수</a>
+                                                                                <a href="#">댓글수</a>
                                                                             </span>
                                                                             <span>
                                                                                 <a href="#">150</a>
