--- a/src/main/resources/templates/join-login/email-login.html
+++ b/src/main/resources/templates/join-login/email-login.html
@@ -90,7 +90,7 @@
     </div>
 
     <div class="modal-container">
-        <div class="modal">
+        <div class="modal-check">
             <div class="modal-content">아이디 비밀번호를 다시 확인해주세요</div>
             <div class="modal-ok-div">
                 <button type="button" class="modal-ok">확인</button>
