--- a/src/main/resources/templates/admin/user.html
+++ b/src/main/resources/templates/admin/user.html
@@ -278,12 +278,6 @@
                 </div>
               </div>
               <div class="user__profile">
-                <h5>공양미 갯수</h5>
-                <div class="user__profile__input">
-                  <input type="text" name="" value="3000개" readonly/>
-                </div>
-              </div>
-              <div class="user__profile">
                 <h5>회원가입 방식</h5>
                 <div class="user__profile__input">
                   <input type="text" name="" value="일반" readonly/>
@@ -296,6 +290,12 @@
                 <h5>이름</h5>
                 <div class="user__profile__input">
                   <input type="text" name="" value="홍길동"/>
+                </div>
+              </div>
+              <div class="user__profile">
+                <h5>공양미 갯수</h5>
+                <div class="user__profile__input">
+                  <input type="text" name="" value="3000개"/>
                 </div>
               </div>
               <div class="user__profile">
