--- a/src/main/resources/templates/admin/volunteer.html
+++ b/src/main/resources/templates/admin/volunteer.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="/css/admin/status.css" />
     <link rel="stylesheet" href="/css/admin/paging.css">
     <link rel="stylesheet" href="/css/admin/volunteer.css">
+    <link rel="stylesheet" href="/css/admin/inquiry-modal.css">
 
     <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote-lite.min.css" rel="stylesheet" />
   </head>
@@ -314,10 +315,17 @@
                     <input type="text" name="" value="서울 복지센터" readonly="true" />
                   </div>
                 </div>
-<!--                <h4 style="margin-top: 20px;">이미지</h4>-->
-<!--                &lt;!&ndash; 이미지 파일 &ndash;&gt;-->
-<!--                <div class="content__img__wrap">-->
-<!--                    &lt;!&ndash; 임시로 name='file' 해둠 &ndash;&gt;-->
+                <h4 style="margin-top: 20px;">이미지</h4>
+                <!-- 이미지 파일 -->
+                <div class="content__img__wrap">
+                    <!-- 임시로 name='file' 해둠 -->
+                    <label>
+                      <div class="content__img">
+                        <img
+                          src="https://us.123rf.com/450wm/mathier/mathier1905/mathier190500002/134557216-%EC%8D%B8%EB%84%A4%EC%9D%BC-%EC%9D%B4%EB%AF%B8%EC%A7%80-%EC%97%86%EC%9D%8C-%ED%8F%AC%EB%9F%BC-%EB%B8%94%EB%A1%9C%EA%B7%B8-%EB%B0%8F-%EC%9B%B9%EC%82%AC%EC%9D%B4%ED%8A%B8%EC%9A%A9-%EC%9E%90%EB%A6%AC-%ED%91%9C%EC%8B%9C%EC%9E%90.jpg?ver=6" />
+                      </div>
+                      <input type="file" name="file" style="display: none" />
+                    </label>
 <!--                    <label>-->
 <!--                      <div class="content__img">-->
 <!--                        <img-->
@@ -367,17 +375,14 @@
 <!--                      </div>-->
 <!--                      <input type="file" name="file" style="display: none" />-->
 <!--                    </label>-->
-<!--                    <label>-->
-<!--                      <div class="content__img">-->
-<!--                        <img-->
-<!--                          src="https://us.123rf.com/450wm/mathier/mathier1905/mathier190500002/134557216-%EC%8D%B8%EB%84%A4%EC%9D%BC-%EC%9D%B4%EB%AF%B8%EC%A7%80-%EC%97%86%EC%9D%8C-%ED%8F%AC%EB%9F%BC-%EB%B8%94%EB%A1%9C%EA%B7%B8-%EB%B0%8F-%EC%9B%B9%EC%82%AC%EC%9D%B4%ED%8A%B8%EC%9A%A9-%EC%9E%90%EB%A6%AC-%ED%91%9C%EC%8B%9C%EC%9E%90.jpg?ver=6" />-->
-<!--                      </div>-->
-<!--                      <input type="file" name="file" style="display: none" />-->
-<!--                    </label>-->
-<!--                </div>-->
-                <div class="notice__content">
-                  <textarea id="summernote" name="editordata"></textarea>
                 </div>
+                <div class="modal__profile__bottom">
+                  <h4>답변 작성</h4>
+                  <textarea cols="20" rows="10" placeholder="답변 내용 작성"></textarea>
+                </div>
+<!--                <div class="notice__content">-->
+<!--                  <textarea id="summernote" name="editordata"></textarea>-->
+<!--                </div>-->
                 <div class="user__profile__button" style="margin-top: 20px;">
                   <button id="completeBtn" class="button__type_2 button__color__green">
                     작성완료
